--- a/backend/.github/workflows/build.yml
+++ b/backend/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
         # Backend CI/CD Process
       - name: Install Dependencies for Backend
-        run: yarn install
+        run: npm install
 
       - name: Execute Tests for Backend
-        run: yarn run test -- --passWithNoTests
+        run: npm run test -- --passWithNoTests
