--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -9,15 +9,10 @@
 # testing
 /coverage
 
-# production
-/build
-
-# logging
-/log/*
-!/log/.gitkeep
-
 # local env files
 .env
+.vercel
 
 # local misc
 /uploads
+/scripts
