Update and sync w/ isolated active frontend repo.

--- a/frontend/.github/workflows/build.yml
+++ b/frontend/.github/workflows/build.yml
@@ -31,13 +31,13 @@ jobs:
 
         # Frontend CI/CD Process
       - name: Install Dependencies for Frontend
-        run: yarn install
+        run: npm install
 
       - name: Build Frontend
-        run: yarn run build
+        run: npm run build
 
       - name: Linting Frontend
-        run: yarn run lint
+        run: npm run lint
         
       - name: Execute Tests for Frontend
-        run: yarn run test -- --passWithNoTests
+        run: npm run test -- --passWithNoTests
