--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,19 +8,30 @@
 
 # next.js
 /.next/
+/out/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# production
+/build
 
 # misc
 .DS_Store
 *.pem
 
-# debugging
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # local env files
 .env
+.env.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Local Netlify folder
+.netlify
