--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.16.4",
+    "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@pinetwork-js/sdk": "^0.7.0",
-    "axios": "^1.7.2",
+    "@sentry/browser": "^8.26.0",
+    "@sentry/nextjs": "^8.26.0",
+    "@sentry/node": "^8.27.0",
+    "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
@@ -27,9 +30,11 @@
     "i18next": "^23.11.3",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "leaflet-geosearch": "^3.11.1",
+    "loglevel": "^1.9.1",
     "next": "^14.2.4",
-    "next-intl": "^3.15.3",
+    "next-intl": "^3.17.2",
     "next-logger": "^4.0.0",
     "next-themes": "^0.3.0",
     "ngx-logger": "^5.0.12",
@@ -45,7 +50,7 @@
     "react-toastify": "^10.0.5",
     "sass": "^1.77.0",
     "sharp": "^0.33.3",
-    "winston": "^3.13.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@pinetwork-js/api-typing": "^0.7.0",
