Misc adjustments from Docker build + testing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,26 +21,28 @@ services:
   frontend:
     build: ./frontend
     environment:
-      PORT: ${PORT}
-      BACKEND_URL: ${BACKEND_URL}
-      SANDBOX_SDK: ${SANDBOX_SDK}
+      NODE_ENV: ${NODE_ENV}
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+      NEXT_PUBLIC_SENTRY_DSN: ${NEXT_PUBLIC_SENTRY_DSN}
 
   backend:
     build: ./backend
     environment:
-      NODE_ENV: ${ENVIRONMENT}
+      NODE_ENV: ${NODE_ENV}
       JWT_SECRET: ${JWT_SECRET}
-      PI_API_KEY: ${PI_API_KEY}
       PLATFORM_API_URL: ${PLATFORM_API_URL}
+      PI_API_KEY: ${PI_API_KEY}
       MONGODB_URL: ${MONGODB_URL}
-      FRONTEND_URL: ${FRONTEND_URL}
+      SENTRY_DSN: ${SENTRY_DSN}
       PORT: ${PORT}
       UPLOAD_PATH: ${UPLOAD_PATH}
       CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
       CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
       CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
+      CLOUDINARY_PLACEHOLDER_URL: ${CLOUDINARY_PLACEHOLDER_URL}
       DEVELOPMENT_URL: ${DEVELOPMENT_URL}
       PRODUCTION_URL: ${PRODUCTION_URL}
+      CORS_ORIGIN_URL: ${CORS_ORIGIN_URL}
 
   mongo:
     image: mongo:5.0
