--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,8 +11,14 @@ RUN npm install
 
 # Copy the resources needed to build the app
 COPY ./src /app/src
+COPY ./messages /app/messages
 COPY ./public /app/public
 COPY ./tsconfig.json /app/tsconfig.json
+COPY ./next.config.mjs /app/next.config.mjs
+COPY ./postcss.config.mjs /app/postcss.config.mjs
+COPY ./tailwind.config.ts /app/tailwind.config.ts
+COPY ./sentry.client.config.mjs /app/sentry.client.config.mjs
+COPY ./logger.config.mjs /app/logger.config.mjs
 COPY ./context /app/context
 
 RUN NODE_PATH=./src npm run build
