Adjust MongoDB connection implementation to construct URL from its different components

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -3,7 +3,14 @@ JWT_SECRET=MAP_OF_PI
 PLATFORM_API_URL=https://api.minepi.com
 PI_API_KEY="ADD YOUR PI API KEY"
 
-MONGODB_URL=mongodb://localhost:27017/demoDB
+MONGODB_URL=mongodb://mapofpi_mongo:27017/demoDB
+MONGODB_URI_PREFIX=mongodb
+MONGODB_APP_USER=""
+MONGODB_APP_PASSWORD=""
+MONGODB_HOST="mapofpi_mongo:27017"
+MONGODB_APP_DATABASE_NAME=demoDB
+MONGODB_OPTION_PARAMS=""
+
 SENTRY_DSN="ADD YOUR SENTRY DSN"
 
 PORT=8001
