--- a/frontend/docker/nginx.conf
+++ b/frontend/docker/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen        80;
-  root          /var/www/webapp;
+  root          /var/www/webapp/server/app;
 
   #charset koi8-r;
   #access_log  /var/log/nginx/log/host.access.log  main;
