--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:18 as builder
+FROM node:18-alpine
+
+EXPOSE 80
 
 ARG ENVIRONMENT=$ENVIRONMENT
 
@@ -29,24 +31,4 @@ RUN NODE_PATH=./src npm run build
 # Remove JS source maps for production
 RUN rm -rf ./build/static/js/*.map
 
-FROM nginx:alpine
-
-EXPOSE 80
-
-COPY ./docker/nginx.conf /etc/nginx/conf.d/default.conf
-COPY ./docker/entrypoint.sh /var/entrypoint.sh
-RUN chmod +x /var/entrypoint.sh
-
-RUN mkdir -p /var/www/webapp
-
-COPY --from=builder /app/.next /var/www/webapp
-
-# Configure Nginx for better performance
-RUN sed -i  "s/worker_processes/#worker_processes/" /etc/nginx/nginx.conf && \
-    echo "worker_processes auto;" >> /etc/nginx/nginx.conf && \
-    echo "worker_rlimit_nofile 16384;" >> /etc/nginx/nginx.conf
-
-WORKDIR /var/www/webapp/server/app
-
-# Run the entrypoint script
-CMD ["/var/entrypoint.sh"]
+CMD ["npm", "run", "start"]
