Add temporary Sentry DSN for staging

--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -1,3 +1,3 @@
 NODE_ENV=production
 BACKEND_URL=https://backend.mapofpi-heuwx64a8iqc29xo.staging.piappengine.com
-NEXT_PUBLIC_SENTRY_DSN="ADD YOUR SENTRY DSN"
+NEXT_PUBLIC_SENTRY_DSN=https://b729b3a46999a192129cec0202930bba@o4507937361625088.ingest.us.sentry.io/4507937365819392
