Make BACKEND_URL accessible to client for API calls

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
-BACKEND_URL=http://backend:8001
+NEXT_PUBLIC_BACKEND_URL=http://backend:8001
 NEXT_PUBLIC_SENTRY_DSN="ADD YOUR SENTRY DSN"
