--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test": "jest --detectOpenHandles --coverage"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
     "@sentry/integrations": "^7.114.0",
     "@sentry/node": "^8.26.0",
     "@sentry/profiling-node": "^8.26.0",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.13",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.17.14",
@@ -39,6 +41,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.2",
