Attempt to set up DigitalOcean connection for images

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -20,6 +20,11 @@ CLOUDINARY_CLOUD_NAME="ADD YOUR CLOUDINARY INFO"
 CLOUDINARY_API_KEY="ADD YOUR CLOUDINARY INFO"
 CLOUDINARY_API_SECRET="ADD YOUR CLOUDINARY INFO"
 
+DIGITAL_OCEAN_SPACES_KEY_ID=DO00BRYDMDCDHRU2T4VF # Actually DigitalOcean, but it uses the AWS JS SDK
+DIGITAL_OCEAN_SPACES_SECRET_ACCESS_KEY=wFZMAOBAKAUhhdKiAIdjPsN8izDbfM6RUb3zBDqEjiM
+IMAGES_BUCKET_NAME=map-of-pi-images-test
+DIGITAL_OCEAN_REGION=sfo3
+
 DEVELOPMENT_URL=http://localhost:8001
 PRODUCTION_URL=https://map-of-pi-backend-react.vercel.app/
 CORS_ORIGIN_URL=http://localhost:4200
