--- a/backend/.env.development
+++ b/backend/.env.development
@@ -20,10 +20,11 @@ CLOUDINARY_CLOUD_NAME="ADD YOUR CLOUDINARY INFO"
 CLOUDINARY_API_KEY="ADD YOUR CLOUDINARY INFO"
 CLOUDINARY_API_SECRET="ADD YOUR CLOUDINARY INFO"
 
-DIGITAL_OCEAN_SPACES_KEY_ID=
-DIGITAL_OCEAN_SPACES_SECRET_ACCESS_KEY=
-IMAGES_BUCKET_NAME=
-DIGITAL_OCEAN_REGION=
+DIGITAL_OCEAN_KEY_ID=
+DIGITAL_OCEAN_SECRET_ACCESS_KEY=
+DIGITAL_OCEAN_BUCKET_NAME=
+DIGITAL_OCEAN_BUCKET_ORIGIN_ENDPOINT=
+DIGITAL_OCEAN_BUCKET_CDN_ENDPOINT=
 
 DEVELOPMENT_URL=http://localhost:8001
 PRODUCTION_URL=https://map-of-pi-backend-react.vercel.app/
