Correct error in BACKEND_URL environment variable

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV=development
-NEXT_PUBLIC_BACKEND_URL=http://backend:8001
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8001
 NEXT_PUBLIC_SENTRY_DSN="ADD YOUR SENTRY DSN"
 NEXT_PUBLIC_PI_SDK_URL=https://sdk.minepi.com/pi-sdk.js
