--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "@sentry/profiling-node": "^8.26.0",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -40,6 +40,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.12.12",
@@ -49,6 +50,7 @@
     "@types/swagger-ui-dist": "^3.30.5",
     "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
