Whitelist DigitalOcean bucket URL on FE for displaying images

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -4,6 +4,7 @@
 # Your environment-specific values should be set in your .env.local file, which is not tracked in version control.
 
 NODE_ENV=development
+IMAGE_BUCKET_HOST=ADD-YOUR-IMAGE-HOST-HERE.com
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8001
 NEXT_PUBLIC_IMAGE_PLACEHOLDER_URL="ADD YOUR IMAGE PLACEHOLDER URL"
 NEXT_PUBLIC_SENTRY_DSN=https://e7a6a9d1d2ac4ab65091a8cb55535688@o4507779280732160.ingest.us.sentry.io/4507779383361536
