--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -1,4 +1,5 @@
 NODE_ENV=production
+IMAGE_BUCKET_HOST=mapofpi-staging.sfo3.digitaloceanspaces.com
 NEXT_PUBLIC_BACKEND_URL=https://backend.mapofpi-heuwx64a8iqc29xo.staging.piappengine.com
 NEXT_PUBLIC_SENTRY_DSN=https://e7a6a9d1d2ac4ab65091a8cb55535688@o4507779280732160.ingest.us.sentry.io/4507779383361536
 NEXT_PUBLIC_PI_SDK_URL=https://staging-sdk.socialchainapp.com/pi-sdk.js
