Added Findme feature and updated map_center settings (Backend).

--- a/backend/src/config/docs/enum/DeviceLocationType.yml
+++ b/backend/src/config/docs/enum/DeviceLocationType.yml
@@ -3,6 +3,7 @@ components:
     DeviceLocationType:
       type: string
       enum:
+        - auto
         - deviceGPS
         - searchCenter
       description: The type of FindMe device location.
