--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
+    "start": "node build/index.js",
     "test": "jest --detectOpenHandles --coverage"
   },
   "dependencies": {
@@ -19,7 +19,6 @@
     "@sentry/profiling-node": "^8.26.0",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
-    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
