Build separate tsconfig for test artifacts to resolve test files not under 'rootDir' error.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "types": ["jest", "node"]
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
