Revert "Remove unused BE UPLOAD_PATH variable"
This reverts commit f1978d2b3abfe4d030d76a9c0b76998fb2dfb325.

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -14,6 +14,7 @@ MONGODB_OPTION_PARAMS=""
 SENTRY_DSN="ADD YOUR SENTRY DSN"
 
 PORT=8001
+UPLOAD_PATH=./../tmp/uploads
 
 DIGITAL_OCEAN_BUCKET_ACCESS_KEY=
 DIGITAL_OCEAN_BUCKET_SECRET_KEY=
