Add comment reminders to remove UPLOAD_PATH later

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -14,6 +14,8 @@ MONGODB_OPTION_PARAMS=""
 SENTRY_DSN="ADD YOUR SENTRY DSN"
 
 PORT=8001
+# TODO: Remove this when Map of Pi is no longer using Vercel/Cloudinary
+#       image hosting solution
 UPLOAD_PATH=./../tmp/uploads
 
 DIGITAL_OCEAN_BUCKET_ACCESS_KEY=
